# CVDT

./: .gitignore  API_REFERENCE.md  BUILD.md  CHANGELOG.md  Cargo.toml  PYTHON.md  README.md  RELEASING.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: release.yml
examples/: sklearn_usage.py
python/cvdt/: __init__.py  _cvdt.pyi  _estimator.py  _treeviz.py
src/: aggregation.rs  binning.rs  candidate.rs  criterion.rs  cross_validation.rs  data.rs  encoder.rs  histogram.rs  lib.rs  objective.rs  parallel.rs  python.rs  selector.rs  tree.rs
tests/: classification.rs  determinism_parallel.rs  edge_cases.rs  integration.rs  objective_metrics.rs  objective_tree.rs  pure_functions.rs  regression.rs  test_sklearn.py
